# Tucil2_13523067_13523103

./: .gitignore  CMakeLists.txt  README.md  mingw-toolchain.cmake
src/: ImageLoadException.hpp  ImageProcessing.cpp  Metrics.cpp  Metrics.hpp  QuadTree.cpp  QuadTree.hpp
src/gif-library/iff2gif/: CMakeLists.txt  iff.h  iff2gif.h  neuquant.hpp
